# FastApp-Server-PoC

./: README.md  form_layout.json  llm.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
LLM/: infer_ollama.py
py-client/: gen_ollama.py  get.py  mock.py  test_con.py  token_count.py
