[project]
name = "fastapp-server-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "jupyterlab>=4.5.6",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
